--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-dark navbar-dark">
         
-        <a href="#" class="navbar-brand">Home page</a>
+        <a href="#" class="navbar-brand">Projects</a>
         
         <button class="navbar-toggler" data-bs-toggle="collapse" type="button" data-bs-target="#navbar-container">
             <span class="navbar-toggler-icon"></span>
